fixed scroll mediapubli pane on tablet

--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -4497,11 +4497,9 @@ small {
     // max-height: 75%;
     max-width: 220px;
     z-index: 1001;
-    pointer-events: none;
-
-    height: 100%;
+    max-height: 100%;
     overflow-y: auto;
-    .padding-vert-small;
+    .padding-vert-verysmall;
 
     .custom_scrollbar(1px, 4px, 3px, rgba(255, 255, 255, 0), @c-noir);
 
@@ -4517,9 +4515,9 @@ small {
       // border-top-left-radius: 0;
       // border-top-left-radius: 0;
       // .padding-sides-verysmall;
-      .padding-vert-verysmall;
+      // .padding-vert-verysmall;
       // .margin-small;
-      .margin-sides-small;
+      .margin-sides-verysmall;
       // margin-right: 0;
       // margin-top: 0;
 
@@ -4846,7 +4844,7 @@ small {
     .m_publicationNavMenu--buttonRow {
       // border-top: 1px solid @c-noir;
       // .margin-sides-medium;
-      // .padding-verysmall;
+      .padding-verysmall;
 
       display: flex;
       flex-flow: row nowrap;
@@ -5863,6 +5861,7 @@ small {
     padding: 0;
     // min-height: auto;
     border: none;
+    background-color: transparent;
   }
 
   @t-borderSize: 1px;
